# qt

./: .env  .gitignore  Cargo.toml  README.md  deploy.sh  matrix-quant-research.service  matrix-quant-research.timer  matrix-quant-watchdog.service  matrix-quant-watchdog.timer  matrix-quant.service
research/: README.md  backtest.py  backtest_grid.py  backtest_pyramid.py  backtest_reclaim.py  build_round_trips.py  download_klines.py  fetch_account.py  funding_harvest.py  funding_vs_dip.py  profile_entries.py  rerun.sh
scripts/: grid_watchdog.sh  ml_pipeline.py
src/: execution.rs  funding.rs  gateway.rs  grid_live.rs  grid_paper.rs  grid_scanner.rs  guardian.rs  main.rs  manip_radar.rs  ml_engine.rs  models.rs  orderbook.rs  paper.rs  portfolio.rs  spot.rs  strategy.rs  telegram.rs
